--- a/Phoneword/Phoneword.csproj
+++ b/Phoneword/Phoneword.csproj
@@ -39,6 +39,7 @@
       <DependentUpon>PhonewordPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PhoneTranslator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
