--- a/Phoneword/Phoneword.csproj
+++ b/Phoneword/Phoneword.csproj
@@ -40,6 +40,8 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PhoneTranslator.cs" />
+    <Compile Include="CallHistoryPage.cs" />
+    <Compile Include="Numbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
